# Receita_Federal_do_Brasil_-_Dados_Publicos_CNPJ

./: .env  .env.template  .gitignore  Dockerfile  ERD_Dados_RFB.pgerd  LICENSE  Makefile  README.md  alembic.ini  cron-config  docker-compose.yaml  pyproject.toml  requirements.txt
Outros/: consulta_cnpj_receita_base_dos_dados.sql
alembic/: env.py
code/: .env_template  ETL_coletar_dados_e_gravar_BD.py  codec.py  color.py  constants.py  database.py  database_utils.py  etl_pipeline.py  files.py  main.py  scrapper.py  setup.py  urls.py  utils.py  var.py
scripts/: add_to_crontab.sh  clean_packages.py  init_db.sh  test_crontab.sh  wait-for-db.sh
src/: banco_de_dados.sql  create_tables.sql  main.py  setup.py
src/core/: base.py  constants.py  etl.py  models.py  schemas.py  scrapper.py  setup.py
src/core/utils/: etl.py  schemas.py
src/database/: dml.py  engine.py  models.py  schemas.py
src/database/utils/: models.py
src/models/: database.py  pydantic.py
src/queries/: create_database.sql  create_tables.sql
src/setup/: base.py  logging.py
src/utils/: database.py  dataframe.py  docker.py  etl.py  logging.py  misc.py  models.py  zip.py
tests/: test_db.py
