[tool.poetry]
name = "poetry add -lock -d -path=\"requirements-txt\""
version = "0.1.0"
description = "Receita Federal do Brasil - Dados Públicos CNPJ"
authors = ["Aphonso Henrique do Amaral Rafael, @aphonsoar", "Bruno Peixoto <brunolnetto@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry add _lock _d _path=\"requirements"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
bs4 = "^0.0.2"
importlib-metadata = "^7.1.0"
python-json-logger = "^2.0.7"
python-dotenv = "^1.0.0"
lxml = "^5.2.2"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
PyYAML = "^6.0.1"
requests = "2.30.0"
ruff = "0.4.5"
SQLAlchemy = "^1.4.18"
typing-extensions = "^3.10.0.0"
tzdata = "2023.3"
wget = "^3.2"
timy = "0.4.2"
tqdm = "4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
